--- a/Off_The_Clock/index.html
+++ b/Off_The_Clock/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Off_The_Clock.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Off_The_Clock.data.br",
-        frameworkUrl: buildUrl + "/Off_The_Clock.framework.js.br",
-        codeUrl: buildUrl + "/Off_The_Clock.wasm.br",
+        dataUrl: buildUrl + "/Off_The_Clock.data",
+        frameworkUrl: buildUrl + "/Off_The_Clock.framework.js",
+        codeUrl: buildUrl + "/Off_The_Clock.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "OffTheClock",
