--- a/Off_The_Clock/index.html
+++ b/Off_The_Clock/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Off_The_Clock.loader.js";
+      var loaderUrl = buildUrl + "/offtheclock.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Off_The_Clock.data",
-        frameworkUrl: buildUrl + "/Off_The_Clock.framework.js",
-        codeUrl: buildUrl + "/Off_The_Clock.wasm",
+        dataUrl: buildUrl + "/offtheclock.data",
+        frameworkUrl: buildUrl + "/offtheclock.framework.js",
+        codeUrl: buildUrl + "/offtheclock.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "OffTheClock",
